kube-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: service-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: servicea
              servicePort: 8080
